# routelit-silicon

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  __init__.py  build_client.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-python-env/: action.yml
.github/workflows/: on-release-main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
src/: __init__.py
src/example/: example.py
src/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: exposeReact.ts  index.ts  lib.css  setup-dev.ts  setup.ts  silicon.min.css
src/frontend/src/components/: button.tsx  checkbox.tsx  expander.tsx  index.tsx  link.tsx  main.tsx  panel.tsx  root.tsx  sidebar.tsx  text-input.tsx  text.tsx
src/routelit_elements/: __init__.py  builder.py
src/routelit_elements/static/: frontend.css
src/routelit_silicon/: __init__.py  builder.py
tests/: builder_test.py
